--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body background="ratjam-rat.gif">
     <iframe src="vibes.mp3" allow="autoplay" id="audio" style="display: none;"></iframe>
+    <audio id="player" hidden="true" autoplay controls>
+        <source src="vibes.mp3" type="audio/mp3">
+    </audio>
+
 </body>
 </html>
