--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body background="ratjam-rat.gif">
-    <iframe src="vibes.mp3" allow="autoplay" id="audio" style="display: none;"></iframe>
-    <audio id="player" hidden="true" autoplay controls>
+    <audio controls autoplay hidden="true">
         <source src="vibes.mp3" type="audio/mp3">
     </audio>
 
