more audio changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body background="ratjam-rat.gif">
-    <audio controls autoplay hidden="true">
+    <audio controls hidden="true">
         <source src="vibes.mp3" type="audio/mp3">
     </audio>
 
