--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body background="ratjam-rat.gif">
-    <audio controls hidden="true">
-        <source src="vibes.mp3" type="audio/mp3">
+    <audio controls autoplay>
+        <source src="https://github.com/Lambert347/ratjam-basic/blob/018eb104678ef2482427f408d9f51a5263e68058/vibes.mp3?raw=true" type="audio/mp3">
     </audio>
-
 </body>
 </html>
