--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+</style>
 <body background="ratjam-rat.gif">
-    <audio autoplay hidden="true" controls>
+    <audio autoplay controls>
         <source src="https://github.com/Lambert347/ratjam-basic/blob/018eb104678ef2482427f408d9f51a5263e68058/vibes.mp3?raw=true" type="audio/mp3">
     </audio>
 </body>
